--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 # Core basics
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"
 thiserror = "1.0"
 log = "0.4"
+env_logger = "0.10"
 hex = "0.4"
 anyhow = "1.0"
 
@@ -102,3 +104,7 @@ rlp = "0.6.1"
 tendermint-light-client = "0.40.4"
 tonic = "0.14.2"
 prost = "0.14.1"
+
+[[bin]]
+name = "test_genesis"
+path = "scripts/test_genesis.rs"
