--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ juniper = "0.15"
 # Async runtime
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 
+# HTTP client for IP detection
+reqwest = { version = "0.11", features = ["json"] }
+
 # Utilities
 lazy_static = "1.4"
 futures = "0.3"
@@ -105,7 +108,3 @@ rlp = "0.6.1"
 tendermint-light-client = "0.40.4"
 tonic = "0.14.2"
 prost = "0.14.1"
-
-[[bin]]
-name = "test_genesis"
-path = "scripts/test_genesis.rs"
