--- a/config/genesis/allocations.toml
+++ b/config/genesis/allocations.toml
@@ -4,6 +4,11 @@
 # IMPORTANTE: Substitua os endereços abaixo pelos endereços de produção
 # que você gerou manualmente com carteiras pós-quânticas seguras.
 #
+# Formato de endereços: Aceita ambos formatos
+#   - Com prefixo 0x: "0xe91b31507e84d575a0a12b1bbb98648bd2079011"
+#   - Sem prefixo 0x: "e91b31507e84d575a0a12b1bbb98648bd2079011"
+#   (normalização automática - compatível com APIs Bitcoin/Ethereum)
+#
 # Valores em ERB (com 8 casas decimais):
 # - 1 ERB = 100,000,000 unidades
 # - 1M ERB = 100,000,000,000,000 unidades
@@ -14,18 +19,14 @@ initial_validators = []
 
 initial_balances = [
   # Reserva Pessoal (50M ERB - 5% do supply)
-  # SUBSTITUA pelo seu endereço de produção
   { address = "0xe91b31507e84d575a0a12b1bbb98648bd2079011", amount = "5000000000000000" },
 
   # Development Fund (20M ERB - 2% do supply)
-  # SUBSTITUA pelo endereço do fundo de desenvolvimento
   { address = "0x0000000000000000000000000000000000000000", amount = "2000000000000000" },
 
   # Ecosystem Fund (20M ERB - 2% do supply)
-  # SUBSTITUA pelo endereço do fundo de ecossistema
   { address = "0x0000000000000000000000000000000000000000", amount = "2000000000000000" },
 
   # Treasury (10M ERB - 1% do supply)
-  # SUBSTITUA pelo endereço do treasury
   { address = "0x0000000000000000000000000000000000000000", amount = "1000000000000000" }
 ]
